Move it to the right. Only use one implementation. Remove the sidebar mentions. Make sure cookie dialog is behind cookie settings.

--- a/apps/dotcom/client/src/tla/components/dialogs/dialogs.module.css
+++ b/apps/dotcom/client/src/tla/components/dialogs/dialogs.module.css
@@ -31,7 +31,7 @@
 
 /* --------------------- Cookie --------------------- */
 
-.sidebarCookieConsent {
+.cookieConsent {
 	background: var(--tla-color-sidebar);
 	border-radius: 8px;
 	padding: 6px;
@@ -40,7 +40,7 @@
 	margin-bottom: 12px;
 }
 
-.sidebarCookieText {
+.cookieText {
 	padding: 8px;
 	padding-bottom: 12px;
 	font-size: 12px;
@@ -48,25 +48,25 @@
 	line-height: 1.4;
 }
 
-.sidebarCookieText a {
+.cookieText a {
 	color: var(--tla-color-primary);
 }
 
-.sidebarCookieButtonsRow {
+.cookieButtonsRow {
 	display: flex;
 	gap: 4px;
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
 
-.sidebarCookieButtons {
+.cookieButtons {
 	display: flex;
 	gap: 4px;
 	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
-.sidebarCookieButton {
+.cookieButton {
 	background: none;
 	position: relative;
 	border: none;
@@ -80,14 +80,22 @@
 	flex-shrink: 0;
 }
 
-.sidebarCookieAcceptButton {
+.cookieAcceptButton {
 	color: var(--tla-color-contrast);
 	background-color: var(--tla-color-primary);
 }
 
 @media (hover: hover) {
-	.sidebarCookieAcceptButton:hover {
+	.cookieAcceptButton:hover {
 		color: var(--tla-color-contrast);
 		background-color: var(--tla-color-primary-hover);
 	}
+}
+
+.cookieConsentWrapper {
+	position: fixed;
+	bottom: 0;
+	right: 12px;
+	z-index: var(--tl-layer-menus);
+	width: fit-content;
 }
